# NESEmulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
NES Emulator/: CMakeLists.txt  bus.c  bus.h  cartridge.c  cartridge.h  controller.c  controller.h  cpu.c  cpu.h  log.c  log.h  main.c  mapper.c  mapper.h  opcodes.c  ppu.c  ppu.h  types.h
NES Emulator/mappers/: mapper000.c  mapper000.h  mapper001.c  mapper001.h
